--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <html>
 <h1>aandelen iron farm</h1>
+<p>Welkom, u kunt aandelen kopen bij de shop van tom. De prijs van 1 aandeel is momenteel 5 diamonds</p>
+<table>
+    <th>Waarde per aandeel</th>
+    <th>Totaal aantal aandelen iron farm</th>
+    <th>Kosten 1 aandeel</th>
+    <th>Laatste bijwerking</th>
+
+    <td>846 iron</td>
+    <td>1</td>
+    <td>5 diamonds</td>
+    <td>12-3-2024</td>
+</table>
 </html>
