--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }).then(function (response) {
             return response.json()
         }).then(function (obj) {
-            console.log(obj.text)
+            console.log(obj)
         })
     }
     function calculateFunction(event) {
